--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -32,6 +32,10 @@
     }
 }
 
+.read-about-tags-label {
+    margin-right: 18px;
+}
+
 .current-issue-articles {
     .default-btn {
         @include alm-btn-font;
