--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -22,6 +22,7 @@
 @import "theme/post-styles/post-headings";
 @import "theme/post-styles/intro-block";
 @import "theme/post-styles/regular-content";
+@import "theme/post-styles/regular-w-inset";
 @import "theme/post-styles/quote-block";
 @import "theme/post-styles/video-wrapper";
 @import "theme/post-styles/dyk";
@@ -38,4 +39,5 @@
 @import "theme/search-results-page";
 @import "theme/page-template";
 @import "theme/page-contact";
+@import "theme/error404";
 @import "theme/footer";
