--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -19,6 +19,7 @@
 
     &:hover {
         border-bottom: none;
+        text-decoration: none;
         &::after {
           transform: scaleX(1);
           transform-origin: bottom left;
