--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_error404.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_error404.scss
@@ -18,7 +18,7 @@
     }
     
     .four04 {
-        font-family: 'Suisse Black', sans-serif;
+        font-family: 'Suisse Bold', sans-serif;
         font-size: 264px;
         line-height: 264px;
         text-align: center;
