--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -16,6 +16,8 @@
     background: 0 0;
     border: none;
     box-shadow: none;
+    right: 7px;
+    position: relative;
 }
 
 input.search-submit{
