--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -148,7 +148,7 @@
 @mixin nav-items {
     font-size: 16px;
     line-height: 20px;
-    font-family: 'Suisse Black', sans-serif;
+    font-family: 'Suisse Bold', sans-serif;
     @include media-breakpoint-down(md) {
         font-size: 15px;
         line-height: 19px;
@@ -279,7 +279,7 @@
     font-size: 112px;
     line-height: 100px;
     letter-spacing: -4px;
-    font-family: "Suisse Black",sans-serif;
+    font-family: "Suisse Bold",sans-serif;
     text-transform: lowercase;
     @include media-breakpoint-down(md) {
         font-size: 80px;
@@ -297,7 +297,7 @@
 @mixin mobile-drawer-term-font {
     font-size: 32px;
     line-height: 20px;
-    font-family: 'Suisse Black', sans-serif;
+    font-family: 'Suisse Bold', sans-serif;
     text-transform: lowercase;
 }
 
@@ -314,8 +314,8 @@
 }
 
 @mixin home-archive-title-font {
-    font-size: 44px;
-    line-height: 50px;
+    font-size: 40px;
+    line-height: 48px;
     font-family: 'Lynon Bold', sans-serif;
     @include media-breakpoint-down(md) {
         font-size: 26px;
@@ -324,8 +324,8 @@
 }
 
 @mixin home-archive-subhading-font {
-    font-size: 44px;
-    line-height: 50px;
+    font-size: 40px;
+    line-height: 48px;
     font-family: 'Lynon Reg', sans-serif;
     @include media-breakpoint-down(md) {
         font-size: 26px;
