--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_regular-content.scss
@@ -1,11 +1,13 @@
+.post-body a {
+    color: $ryersonBlue;
+    text-decoration: underline;
+}
 .post-body cite {
     font-style: normal;
     color: #234586;
     font-size: 80%;
     font-family: 'Lynon Bold', sans-serif;
 }
-
-
 .sidebar-citations {
 //    @include flex-height;
 }
