--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
@@ -7,6 +7,7 @@
     text-transform: lowercase;   
     padding: 4px 0 !important;
     margin: 0 12px !important;
+    letter-spacing: .1px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -18,7 +19,7 @@
     padding: 0 1rem;
 }
 .navbar-nav {
-    padding: 25px 0;
+    padding: 25px 0; 
 }
 
 .nav-item {
