--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -1,3 +1,11 @@
+//.over1340 {display: block;}
+//.under1340 {display: none;}
+//
+//@media (max-width: 1340px) {
+//    .over1340 {display: none;}
+//    .under1340 {display: block;}
+//}
+
 a.home-logo-rel-wrapper {
     position: relative;
     display: block;
@@ -8,10 +16,9 @@ a.home-logo-rel-wrapper {
         font-family: 'Suisse Reg', sans-serif;
         text-align: center;
         position: absolute;
-        right: 28%;
+        left: 253px;;
 
     }
-    
     span {
       display: inline-block;
       position: relative;
@@ -126,7 +133,7 @@ a.home-logo-rel-wrapper {
 .editors-picks-flex {
     display: flex;
     justify-content: space-between;
-    border-top: 2px dotted $black;
+    border-top: 4px solid $black;
     padding: 15px 0 0 0;
     list-style-type: none;
 //    border-bottom: 2px dotted $black;
@@ -134,7 +141,7 @@ a.home-logo-rel-wrapper {
         position: relative;
         width: 22%;
         @include media-breakpoint-up(md) {
-            border-left: 1px solid #E8E8E8;
+            border-left: 1px solid $black;
             padding-left: 23px;
             margin-top: 20px;
             &:first-child {
@@ -150,12 +157,11 @@ a.home-logo-rel-wrapper {
             @include box-color-hovers;
             p.primary-category {
                 border-bottom: none;
+                font-family: 'Suisse Bold', sans-serif;
             }
             .editors-pick-title {
                 @include archive-title-font;
                 margin-bottom: 0;
-                font-size: 26px;
-                line-height: 32px;
                 font-family: 'Lynon Reg', sans-serif;
             }
         }
@@ -190,15 +196,15 @@ a.home-logo-rel-wrapper {
     display: inline-block;
     position: relative;
     &::before {
-        height: 30px;
+        height: 26px;
         width: 100%;
         content: "";
         background-color: rgba(196, 196, 196, 0.7);
         position: absolute;
-        bottom: -7px;
+        bottom: -12px;
         @include media-breakpoint-down(sm) {
-            height: 16px;
-            bottom: 6px;
+            height: 17px;
+            bottom: -1px;
         }
     }
     @include media-breakpoint-down(sm) { 
@@ -272,9 +278,10 @@ a.home-logo-rel-wrapper {
 }
 
 
-@media (min-width: 1400px) {
+
+@media (min-width: 768px) {
     .featured-cat-heading {
-        left: -100px;
+        left: -30px;
     }
 }
 
@@ -284,10 +291,9 @@ a.home-logo-rel-wrapper {
     }
 }
 
-
-@media (min-width: 768px) {
+@media (min-width: 1400px) {
     .featured-cat-heading {
-        left: -30px;
+        left: -100px;
     }
 }
 
