--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_intro-block.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_intro-block.scss
@@ -10,7 +10,7 @@
         line-height: 20px;
         padding-bottom: 20px;
         margin-bottom: 20px;
-        border-bottom: 2px dotted $black;
+        border-bottom: 4px solid $black;
     }
     .primary-category {
         @include post-cat;
@@ -26,7 +26,7 @@
     .single-related-article {
         padding-bottom: $space;
         margin-bottom: $space;
-        border-bottom: 1.5px solid #D9D9D9;
+        border-bottom: 1.25px solid $black;
         &:last-of-type {
             border-bottom: none;
             margin-bottom: 0;
@@ -39,10 +39,13 @@
             @include box-color-hovers;
             p.primary-category {
                 border-bottom: none;
+                font-family: 'Suisse Bold', sans-serif;
             }
             .editors-pick-title {
                 font-family: 'Lynon Reg', sans-serif;
-                font-size: 1.5rem;
+                font-size: 20px;
+                line-height: 26px;
+                margin-bottom: 0;
             }
         }
     }
