done items from katherine meeting

--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -16,6 +16,7 @@
 @import "theme/global";
 @import "theme/mixins";
 @import "theme/header";
+@import "theme/header-scroll-intent";
 @import "theme/header-mobile";
 @import "theme/drawer";
 @import "theme/drawer-mobile";
