--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15269,6 +15269,23 @@ body strong {
     display: none;
   }
 }
+.false-header-height {
+  display: block;
+  width: 100%;
+  height: 80px;
+}
+
+header.not-homepg {
+  position: fixed;
+  width: 100%;
+  background: #fff;
+  z-index: 999;
+  transition: 0.2s all;
+}
+header.not-homepg.neg-margin {
+  margin-top: -80px;
+}
+
 @media (min-width: 768px) {
   .mobile-nav {
     display: none;
@@ -15425,8 +15442,8 @@ input[type=search]:-webkit-autofill::first-line {
 
 .drawer-tags-row a {
   display: inline;
-  font-size: 36px;
-  line-height: 60px;
+  font-size: 2.3vw;
+  line-height: 3.8vw;
   font-family: "Lynon Reg", sans-serif;
   color: #fff;
   white-space: nowrap;
@@ -16526,7 +16543,7 @@ p.form-submit {
 @media (max-width: 991.98px) {
   .archive-page h1.page-title, .home h1.page-title {
     font-size: 80px;
-    line-height: 90px;
+    line-height: 80px;
   }
 }
 @media (max-width: 767.98px) {
@@ -16535,7 +16552,6 @@ p.form-submit {
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -2px;
-    padding-bottom: 20px;
   }
 }
 .archive-page h1.page-title::before, .home h1.page-title::before {
@@ -16549,7 +16565,7 @@ p.form-submit {
 @media (max-width: 767.98px) {
   .archive-page h1.page-title::before, .home h1.page-title::before {
     height: 17px;
-    bottom: -1px;
+    bottom: 2px;
   }
 }
 .archive-page h1.page-title.green::before, .home h1.page-title.green::before {
@@ -16960,7 +16976,7 @@ a.home-logo-rel-wrapper:hover span::after {
 @media (max-width: 991.98px) {
   .featured-cat-heading {
     font-size: 80px;
-    line-height: 90px;
+    line-height: 80px;
   }
 }
 @media (max-width: 767.98px) {
@@ -16969,7 +16985,6 @@ a.home-logo-rel-wrapper:hover span::after {
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -2px;
-    padding-bottom: 20px;
   }
 }
 .featured-cat-heading::before {
@@ -17311,7 +17326,7 @@ h2.contact-masthead-title {
 @media (max-width: 991.98px) {
   #error-404-wrapper h1.page-title {
     font-size: 80px;
-    line-height: 90px;
+    line-height: 80px;
   }
 }
 @media (max-width: 767.98px) {
@@ -17320,7 +17335,6 @@ h2.contact-masthead-title {
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -2px;
-    padding-bottom: 20px;
   }
 }
 #error-404-wrapper h1.page-title::before {
